Refactoring grid card properties

--- a/src/DashboardBundle/Resources/views/Common/backend2.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/backend2.html.twig
@@ -45,7 +45,7 @@
     {% endblock center%}
 
     {% block east  %}
-      {% include 'DashboardBundle:Common:Partials/_backend-floting-botton.html.twig' %}
+      {#{% include 'DashboardBundle:Common:Partials/_backend-floting-botton.html.twig' %}#}
       {% include 'DashboardBundle:Common:Partials/_backend-chat.html.twig' %}
     {% endblock east %}
 
