Refactoring grid card properties

--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateMyContacts.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateMyContacts.html.twig
@@ -277,9 +277,9 @@
   <p class="no_data">
     {#{{ grid.noDataMessage|default('No data')|trans|raw }}#}
   <div class="page-header" style="clear: both">
-    <h1 style="text-align: center">
+    <h3 style="text-align: center;color: #9e9e9e;">
       <small>There are no records.</small>
-    </h1>
+    </h3>
   </div>
   </p>
 {% endblock grid_no_data %}
