--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -84,14 +84,13 @@
       </div>
     </div>
     <div class="content">
-
       <form data-parsley-validate id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
         <div class="row" style="padding-left: 20px;padding-right: 3%;margin-top: 1rem;">
           <div class="row" style="margin-top: 0rem;">
             <div class="col m6" style="padding-bottom: 15px;">
               <div class="input-field">
                 {{ form_widget(form.name, {'attr': {'required':'required'}}) }}
-                <label for="property_lease_term" class="">Name</label>
+                <label for="contact_list_name" class="">Name</label>
               </div>
             </div>
           </div>
@@ -101,47 +100,82 @@
     </div>
   </div>
 
-<div class="card">
-  <div class="title">
-    <h5> Manage contacts </h5>
-    <div class="btn-group right">
-      <a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modalAddContat"> <i class="mdi mdi-social-group-add left"></i>Add contact</a>
-      <a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modalImportContact"> <i class="mdi mdi-communication-import-export left"></i>Import contact</a>
+  <div class="row" style="margin-top: 10px;">
+    <div class="col m6" style="padding-right: 15px">
+      <div class="card">
+        <div class="title">
+          <h5> All contacts  </h5>
+        </div>
+        <div class="content" style="padding:10px;padding-bottom: 0px">
+          {{ grid(grid, 'DashboardBundle:Grid:gridTemplateContactsAjax.html.twig') }}
+        </div>
+      </div>
+    </div>
+    <div class="col m6">
+      <div class="card">
+        <div class="title">
+          <h5> Contacts in this list  </h5>
+          <div class="btn-group right">
+            <a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modalAddContat" style="padding-left: 10px;padding-right: 10px;">
+              <i class="mdi mdi-social-group-add left" style="margin-right: 10px;"></i>Add contact
+            </a>
+            <a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modalImportContact" style="padding-left: 10px;padding-right: 10px;">
+              <i class="mdi mdi-communication-import-export left" style="margin-right: 10px;"></i>Import contact
+            </a>
+          </div>
+        </div>
+
+        <div class="content" style="padding:10px;">
+          {{ grid(grid2, 'DashboardBundle:Grid:gridTemplateMyContactsAjax.html.twig') }}
+        </div>
+      </div>
     </div>
   </div>
 
   {% include 'DashboardBundle:ContactList:Partials/_modal-add-contact.html.twig' %}
   {% include 'DashboardBundle:ContactList:Partials/_modal-import-contact.html.twig' %}
 
-  <div class="content" style="padding-top: 5px">
-    <div class="row" style="margin-top: 5px;">
-      <div class="col m6" style="padding-bottom: 0px;">
-        <span style="font-size: 18px">All contacts:</span>
-        {{ grid(grid, 'DashboardBundle:Grid:gridTemplateContactsAjax.html.twig') }}
-      </div>
-      <div class="col m6" style="padding-bottom: 0px;">
-        <span style="font-size: 18px">Contacts in this list:</span>
-        {{ grid(grid2, 'DashboardBundle:Grid:gridTemplateMyContactsAjax.html.twig') }}
-      </div>
-    </div>
+{#<div class="card">#}
+  {#<div class="title">#}
+    {#<h5> Manage contacts </h5>#}
+    {#<div class="btn-group right">#}
+      {#<a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modalAddContat"> <i class="mdi mdi-social-group-add left"></i>Add contact</a>#}
+      {#<a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modalImportContact"> <i class="mdi mdi-communication-import-export left"></i>Import contact</a>#}
+    {#</div>#}
+  {#</div>#}
 
-    <div class="row">
-      <div class="col m2" style="padding-right: 0px">
-        <i class="green circle circle-status-bootom"> <span></span></i> <b style="margin-left: 30px;"> Enabled contact</b>
-      </div>
-      <div class="col m2">
-        <i class="red circle circle-status-bootom"> <span></span></i> <b style="margin-left: 30px;"> Disabled contact</b>
-      </div>
-      <div class="col m4">
-        <div style="margin-top: -6px;">
-          <i class="mdi mdi-hardware-keyboard-arrow-right arrow-switch-legent"></i>
-          <i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch-legent"></i>
-          <b> Switch contact </b>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+  {#{% include 'DashboardBundle:ContactList:Partials/_modal-add-contact.html.twig' %}#}
+  {#{% include 'DashboardBundle:ContactList:Partials/_modal-import-contact.html.twig' %}#}
+
+  {#<div class="content" style="padding-top: 5px">#}
+    {#<div class="row" style="margin-top: 5px;">#}
+      {#<div class="col m6" style="padding-bottom: 0px;">#}
+        {#<span style="font-size: 18px">All contacts:</span>#}
+        {#{{ grid(grid, 'DashboardBundle:Grid:gridTemplateContactsAjax.html.twig') }}#}
+      {#</div>#}
+      {#<div class="col m6" style="padding-bottom: 0px;">#}
+        {#<span style="font-size: 18px">Contacts in this list:</span>#}
+        {#{{ grid(grid2, 'DashboardBundle:Grid:gridTemplateMyContactsAjax.html.twig') }}#}
+      {#</div>#}
+    {#</div>#}
+
+    {#<div class="row">#}
+      {#<div class="col m2" style="padding-right: 0px">#}
+        {#<i class="green circle circle-status-bootom"> <span></span></i> <b style="margin-left: 30px;"> Enabled contact</b>#}
+      {#</div>#}
+      {#<div class="col m2">#}
+        {#<i class="red circle circle-status-bootom"> <span></span></i> <b style="margin-left: 30px;"> Disabled contact</b>#}
+      {#</div>#}
+      {#<div class="col m4">#}
+        {#<div style="margin-top: -6px;">#}
+          {#<i class="mdi mdi-hardware-keyboard-arrow-right arrow-switch-legent"></i>#}
+          {#<i class="mdi mdi-hardware-keyboard-arrow-left arrow-switch-legent"></i>#}
+          {#<b> Switch contact </b>#}
+        {#</div>#}
+      {#</div>#}
+    {#</div>#}
+  {#</div>#}
+{#</div>#}
   <script src="{{ asset('bundles/dashboard/material/js/parsley.min.js') }}" type="text/javascript"></script>
   <script src="{{ asset('bundles/common/js/jquery/plugin/jquery.form.js') }}" type="text/javascript"></script>
   <script src="{{ asset('bundles/common/js/papaparse.js') }}" type="text/javascript"></script>
