--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateContacts.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateContacts.html.twig
@@ -17,7 +17,7 @@
     });
   </script>
 
-  <div class="grid" style="padding-top: 0px;">
+  <div class="grid" style="padding-top: 0px;padding-bottom: 0px;">
 
     {% if grid.totalCount > 0 or grid.isFiltered or grid.noDataMessage is sameas(false) %}
     <form id="{{ grid.hash }}" action="{{ grid.routeUrl }}" method="post">
@@ -140,7 +140,7 @@
 
           </style>
           <div class="row">
-            <div class="col m12">
+            <div class="col m12" style="padding: 0px;padding-bottom: 15px">
               <ul class="collection">
               {% for row in grid.rows %}
                 <li class="collection-item avatar avatar-left">
@@ -273,9 +273,9 @@
   <p class="no_data">
     {#{{ grid.noDataMessage|default('No data')|trans|raw }}#}
   <div class="page-header" style="clear: both">
-    <h1 style="text-align: center">
+    <h3 style="text-align: center;color: #9e9e9e;">
       <small>There are no records.</small>
-    </h1>
+    </h3>
   </div>
   </p>
 {% endblock grid_no_data %}
@@ -550,10 +550,7 @@
   {% else %}
 
     <div class="row" style="margin-top: 0px">
-      <div class="col m2" style="padding-bottom: 0px;">
-        {{ grid_pager_totalcount(grid) }}
-      </div>
-      <div class="col m10" style="padding-bottom: 0px;">
+      <div class="col m12" style="padding-bottom: 0px;">
         {{ grid_pager_selectpage(grid) }}
       </div>
     </div>
@@ -579,36 +576,16 @@
 {# ---------------------------------------------------- grid_pager_selectpage -------------------------------------------------- #}
 {% block grid_pager_selectpage %}
   {% spaceless %}
-    <div class="row" style="margin-top: 10px;">
-      <div class="col l2">
-        <b style="font-size: 12px;position: relative;top: -8px;left: 8px;">{{ 'Page'|trans }}</b>
-      </div>
-      <div class="col l6">
-        <a style="margin-top: -35px;width: 25px;padding-left: 10px;"
-           class="btn btn-primary {% if grid.page <= 0 %}disabled{% endif %}"
-           {% if grid.page <= 0 %}disabled="disabled" {% else %} onclick="return {{ grid.hash }}_previousPage();" {% endif %}><i
+    <a style="margin-top: -35px;width: 25px;padding-left: 10px;"
+       class="btn btn-primary {% if grid.page <= 0 %}disabled{% endif %}"
+       {% if grid.page <= 0 %}disabled="disabled" {% else %} onclick="return {{ grid.hash }}_previousPage();" {% endif %}><i
               class="mdi-hardware-keyboard-arrow-left"></i></a>
-               <input type='text' class="" value="{{ grid.page + 1 }}"
-               style="  width: 34px;margin-right: 10px !important;margin-left: 10px !important;text-align: center;position: relative;top: -17px; max-height: 34px;text-indent: -1px;"
-               onkeypress="return {{ grid.hash }}_enterPage(event, parseInt(this.value)-1);"/><a style="margin-top: -35px;width: 25px;padding-left: 10px;"
-           class="btn btn-primary {% if grid.page >= grid.pageCount-1 %}disabled {% endif %}"
-           {% if grid.page >= grid.pageCount-1 %}disabled="disabled" {% else %}  onclick="return {{ grid.hash }}_nextPage();" {% endif %}><i
-              class="mdi-hardware-keyboard-arrow-right"></i></a>
-      </div>
-      <div class="col l2">
-        <b style="font-size: 12px;position: relative;top: -7px;left: -22px;">of &nbsp;<label class="" style="font-size: 12px;
-                    font-weight: 400;
-                    font-size: .9rem;
-                    color: #fff;
-                    background-color: #42A5F5;
-                    height: auto;
-                    line-height: 1;
-                    border-radius: 2px;
-                    min-width: 10px;
-                    padding: 3px 7px;">{{ grid.pageCount }}</label>
-        </b>
-      </div>
-    </div>
+    <input type='text' class="" value="{{ grid.page + 1 }}"
+           style="  width: 34px;margin-right: 10px !important;margin-left: 10px !important;text-align: center;position: relative;top: -17px; max-height: 34px;text-indent: -1px;"
+           onkeypress="return {{ grid.hash }}_enterPage(event, parseInt(this.value)-1);"/><a style="margin-top: -35px;width: 25px;padding-left: 10px;"
+                                                                                             class="btn btn-primary {% if grid.page >= grid.pageCount-1 %}disabled {% endif %}"
+                                                                                             {% if grid.page >= grid.pageCount-1 %}disabled="disabled" {% else %}  onclick="return {{ grid.hash }}_nextPage();" {% endif %}><i
+            class="mdi-hardware-keyboard-arrow-right"></i></a>
 
   {% endspaceless %}
 {% endblock grid_pager_selectpage %}
