Refactoring grid card properties

--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -106,7 +106,7 @@
         <div class="title">
           <h5> All contacts  </h5>
         </div>
-        <div class="content" style="padding:10px;padding-bottom: 0px">
+        <div class="content" style="padding:10px;">
           {{ grid(grid, 'DashboardBundle:Grid:gridTemplateContactsAjax.html.twig') }}
         </div>
       </div>
