--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateContacts.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateContacts.html.twig
@@ -139,7 +139,7 @@
             }
 
           </style>
-          <div class="row">
+          <div class="row" style="margin-top: 60px">
             <div class="col m12" style="padding-bottom: 15px">
               <ul class="collection">
               {% for row in grid.rows %}
@@ -390,7 +390,7 @@
   {% set from = column.data.from is defined ? column.data.from : null %}
   {% set to = column.data.to is defined ? column.data.to : null %}
 
-  <span class="grid-filter-input">
+  <span class="grid-filter-input" style="position: absolute;right: 0">
 
             <span class="grid-filter-input-query">
                 <table class="">
@@ -405,10 +405,34 @@
                         <div class="filter-search btn-group pull-left input-append">
                           <div class="span6">
                             <div class="input-group input-group-sm">
-                              <div class="input-group input-group-sm">
-                                <input style="width: 250px" type="{{ column.inputType }}"
+                              <div class="input-group input-group-sm"><style>
+                                  span.search-clean-close {
+                                    cursor: pointer;color: #9E9E9E;position: absolute;right: 42px;top: 3px;font-size: 20px;
+                                  }
+                                </style>
+                                <script>
+                                  $(document).ready(function () {
+                                    var valueSearchObjs = $('.input-search-1-filter-1');
+                                    for(var i = 0; i < valueSearchObjs.length;i++){
+                                      var valueSearchObj = valueSearchObjs[i]
+                                      var inputValue = $('#'+valueSearchObj.id).val()
+                                      if(inputValue!==""){
+                                        var spanId = "input-search-1-close-" + $('#'+valueSearchObj.id).data("item-id")
+                                        $('#'+spanId).attr("style","display:block")
+                                        $( "#"+spanId ).on( "click", function() {
+                                          $('#'+valueSearchObj.id).val("")
+                                          return {{ grid.hash }}_submitForm(event, this.form);
+                                        });
+                                      }
+                                    }
+//
+                                  });
+                                </script>
+                                <span style="display:none" id="input-search-1-close-{{ column.id }}" class="mdi-navigation-close search-clean-close"> </span>
+
+                                <input id="input-search-1-{{ column.id }}" data-item-id="{{ column.id }}" style="width: 250px" type="{{ column.inputType }}"
                                        value="{{ from }}"
-                                       class="input-small  search-query input-small grid-filter-input-query-from "
+                                       class="input-search-1-filter-1 input-small  search-query input-small grid-filter-input-query-from "
                                        placeholder="{{ column.title|trans }}"
                                        name="{{ grid.hash }}[{{ column.id }}][from]"
                                        id="{{ grid.hash }}__{{ column.id }}__query__from"
